--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 <body>
   <div id="app"></div>
   <script src="config/youtube.js"></script>
-  <script src="searchYouTube.js"></script>
+  <script type="text/babel" src="searchYouTube.js"></script>
   <script type="text/babel" src="components/VideoListEntry.js"></script>
   <script type="text/babel" src="components/VideoList.js"></script>
   <script type="text/babel" src="components/VideoPlayer.js"></script>
