--- a/client/index.html
+++ b/client/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="config/youtube.js"></script>
-  <script type="text/babel" src="searchYouTube.js"></script>
+  <script type="text/babel" src="config/youtube.js"></script>
+  <script type="text/babel" src="components/searchYouTube.js"></script>
   <script type="text/babel" src="components/VideoListEntry.js"></script>
   <script type="text/babel" src="components/VideoList.js"></script>
   <script type="text/babel" src="components/VideoPlayer.js"></script>
